2009-01-20 Borut Razem <borut.razem AT siol.net>

	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.8
	  due creation of ar format libraries
	* support/scripts/sdcc.nsi:
	  don't add nonexistent object files to the package

2009-01-19 Borut Razem <borut.razem AT siol.net>

	* Makefile.in, configure.in, configure,
	  device/lib/Makefile.in, device/lib/ds390/Makefile.in,
	  device/lib/ds400/Makefile.in, device/lib/gbz80/Makefile.in,
	  device/lib/hc08/Makefile.in, device/lib/large/Makefile.in,
	  device/lib/mcs51/Makefile.in, device/lib/medium/Makefile.in,
	  device/lib/small/Makefile.in,
	  device/lib/z80/Makefile.in: create ar format libraries
	* support/regression/ports/mcs51-xstack-auto/spec.mk:
	  use device/lib/Makefile to create library
	* support/regression/tests/snprintf.c:
	  floating point is not enabled in small-xstack-auto library
	* device/lib/libfloat.lib, device/lib/libint.lib,
	  device/lib/liblong.lib, device/lib/libsdcc.lib: removed

2009-01-18 Borut Razem <borut.razem AT siol.net>

	* support/cpp/auto-host.h: fixed warning: "__STDC__" redefined,
	  warning: extra tokens at end of #endif directive

2009-01-11 Borut Razem <borut.razem AT siol.net>

	* Makefile.in: added SDCC_ASRANLIB to PKGS

2009-01-10 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added asranlib.exe to the install package
	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.7
	  due added support for ar format libraries

2009-01-09 Borut Razem <borut.razem AT siol.net>

	* as/asranlib/Makefile.in, as/asranlib/asranlib.dsp,
	  as/asranlib/asranlib.c: added asranlib
	* as/link/lkar.c, as/link/lkar.h: added support for ar format libraries
	* Makefile.in, as/link/hc08/Makefile.in,
	  as/link/hc08/link_hc08.dsp, as/link/lklib.c, as/link/lklibr.c,
	  as/link/lklibr.h, as/link/lkrel.c, as/link/lkrel.h,
	  as/link/lksdcclib.c, as/link/mcs51/Makefile.in,
	  as/link/mcs51/aslink.dsp, as/link/z80/Makefile.in,